<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.savan.brainsquiz.QuizLayout"
    android:orientation="vertical"
    android:layout_marginBottom="20sp" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="right">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ScoreTag"
            android:textSize="15sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/Score"
            android:id="@+id/scoreLabel"
            android:textSize="15sp"
            android:layout_marginLeft="5sp"/>

    </LinearLayout>

    <LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/QuestionTag"
        android:textSize="20sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/questionLabel"
        android:text="@string/QuestionText"
        android:textSize="20sp"
        android:singleLine="false"
        android:padding="20sp"/>


</LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30sp"
        android:layout_marginLeft="20sp">



        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rGroup"
            >

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/option1"
                android:id="@+id/op1"
                android:onClick="radioSelected" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/option2"
                android:id="@+id/op2"
                android:onClick="radioSelected"
                android:layout_marginTop="10sp"/>

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/option3"
                android:id="@+id/op3"
                android:onClick="radioSelected"
                android:layout_marginTop="10sp"/>

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/option4"
                android:id="@+id/op4"
                android:onClick="radioSelected"
                android:layout_marginTop="10sp"/>

        </RadioGroup>

    </LinearLayout>

</LinearLayout>
